fix: umi ui dashboard title overflow

--- a/packages/umi-ui/client/src/pages/project/components/list/index.less
+++ b/packages/umi-ui/client/src/pages/project/components/list/index.less
@@ -161,6 +161,7 @@
         margin-bottom: 0;
         color: @text-color-secondary;
         height: 66px;
+        word-break: break-all;
       }
       &-editor {
         &-icon {
